<?xml version="1.0"?>
<package format="2">
  <name>create_visualizer</name>
  <version>1.3.0</version>
  <description>Launch visualization for remote working with create_bringup.</description>

  <maintainer email="m.takeshi1995@gmail.com">Takeshi Miura</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>create_description</exec_depend>
  <exec_depend>create_driver</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
